verifier/runs/run2_v2_2026-07-19T022938Z.log
cmd: python3 verifier/v2/verify.py | 2026-07-19T02:29:38Z
  File "/mnt/agents/output/verifier/v2/verify.py", line 50
    keysets[loc] = flat(data)
                             ^
IndentationError: unindent does not match any outer indentation level
